# rust-euler

./: Cargo.toml
benches/: primes_bench.rs
src/: lib.rs  numbers.rs  primes.rs
