[package]
name = "euler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gray-codes = "0.1.1"
num-bigint = "0.4.3"
num-traits = "0.2.14"
num-integer = "0.1.44"
criterion = "0.3"
itertools = "0.6.0"

[[bench]]
name = "primes_bench"
harness = false

